replay: UiMediaSoupV3WebRtcClient: fix visibility of icons in Firefox Yann Massard 2022-12-21 19:56

--- a/client/projector-mediasoup-client/src/main/less/MediaSoupV3WebRtcClient.less
+++ b/client/projector-mediasoup-client/src/main/less/MediaSoupV3WebRtcClient.less
@@ -111,14 +111,15 @@
         display:flex;
 
         .UiToolButton .img:hover:not(:active) {
-          filter: drop-shadow(1px 1px 3px #0005);
+          filter: drop-shadow(1px 1px 3px #0007);
         }
       }
 
       > .icons {
-        flex: 0 0 auto;
+        flex: 1 0 auto;
         height: 100%;
         display:flex;
+        justify-content: flex-end;
 
         > .icon {
           height: 100%;
